add reference to forked nbconvert

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 coverage
 jyquickhelper
 keyring
+git+https://github.com/sdpython/nbconvert.git@fixes
 pillow
 pyquickhelper>=1.8.2814
 scikit-learn
