--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 install:
   - sudo apt-get install -qq gcc-6 g++-6
   - pip install -r requirements.txt
+  - export PYTHONPATH=src
 before_script:
   - python setup.py build_ext --inplace
 script:
