--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ jyquickhelper
 keyring
 git+https://github.com/sdpython/nbconvert.git@fixes
 pillow
+pylint>=2.4.2
 pyquickhelper>=1.9
 scikit-learn
 scipy
