--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 coverage
 jyquickhelper
 keyring
+pandas
 pillow
 pylint>=2.4.2
 pyquickhelper>=1.9.3240
 scikit-learn
 scipy
 sphinx_readable_theme
+sphinx_gallery
 tornado
 wheel
