--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
-dist: bionic
+dist: focal
 sudo: true
 language: python
 python:
-    - "3.7"
-    - "3.8"
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
+    - "3.9"
 install:
-  - sudo apt-get install -qq gcc-6 g++-6
   - pip install -r requirements.txt
   - export PYTHONPATH=src
 before_script:
